compiler/tests/pass/path_keywords/ui/window.afns
package ui.window;

fn noop_ui() -> i32 {
    return 0;
}
