compiler/tests/fail/private_type_import/main.afns
package app;

import lib.api;

fn main() -> i32 {
    let value = make();
    return 0;
}
